[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "gape"
version = "0.1.0"
readme = ",gape.md"
description = "Tiny stdlib-only python tricks: records, io, stats, columns, distance"
authors = [{name = "Tim Menzies", email = "timm@ieee.org"}]
license = {text = "MIT"}
requires-python = ">=3.12"
dependencies = []          # stdlib only, by design

[tool.setuptools]
py-modules = ["gape", "data", "dist"]

[project.urls]
Homepage = "http://tiny.cc/gape"
