[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "gape"
version = "0.1.0"
readme = ",gape.md"
description = "Tiny stdlib-only python tricks: records, io, stats, columns, distance"
authors = [{name = "Tim Menzies", email = "timm@ieee.org"}]
license = {text = "MIT"}
requires-python = ">=3.12"
dependencies = []          # stdlib only, by design

[tool.setuptools]
py-modules = ["gape"]

[project.urls]
Homepage = "http://tiny.cc/gape"

# linting: gape's minimal style on purpose -- 2-space indent, short
# names (o, i, v, n), terse one-liners, # header not a docstring.
[tool.pylint.format]
indent-string = "  "         # 2 spaces -> silences W0311
max-line-length = 80

[tool.pylint.messages_control]
disable = [
  "invalid-name",            # short names: o, i, v, n, xs ...
  "missing-module-docstring",# header is a # comment, by choice
  "missing-function-docstring", # one-line "..." strings count? keep off
  "too-few-public-methods",  # o is a 1-trick dict subclass
  "consider-using-f-string",
]

# ruff (the Makefile's `make check`) already ignores 2-space indent;
# only tighten what you want.
[tool.ruff.lint]
ignore = [
  "E701",   # one-line if/for/def colon bodies
  "E702",   # `a; b` multiple statements
  "E731",   # `f = lambda ...` assignments
  "E741",   # short names like l/o/i
  "E401",   # grouped `import a, b, c`
]
